# PathIn

./: .gitignore  LICENSE  PathIn-Details.md  README.md
backend/: .env.example  .vercelignore  README.md  app.py  pyproject.toml
backend/pathin_api/: __init__.py  career_service.py  errors.py  map_store.py  members.py  models.py  navigator.py  navigator_fixtures.py  neighbors.py  path_predictor.py  pit_repository.py  profile_store.py  recommendation_engine.py  resume_parser.py  suggestion_service.py  taxonomy.py  text_cleanup.py  transition_analysis.py  weighting.py
backend/pathin_api/data/: analyzer_prompt.txt  scenarios.json  suggestions_dataset.json  synthesizer_prompt.txt
backend/tests/: test_app.py  test_navigator.py  test_quiz.py
docs/: JUDGE_DEMO_GUIDE.md  PRODUCT_REQUIREMENTS.md  VERTICAL_FOCUS_PROTOTYPE_PROMPT.md
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/career-tree/: page.tsx
frontend/src/app/quiz/: page.tsx
frontend/src/components/linkedin/: avatar.tsx  feed.tsx  header.test.tsx  header.tsx  icons.tsx  messaging.tsx  news-sidebar.tsx  profile-sidebar.test.tsx  profile-sidebar.tsx
frontend/src/features/pathin/: career-map-data.ts  career-map-view.test.tsx  career-map-view.tsx  career-tree.module.css  career-tree.test.tsx  career-tree.tsx  display-text.test.ts  display-text.ts  pathin-api.ts  pit-data.server.ts  saved-map-storage.ts  (+4 more)
plans/: cokoisor-cleanup&add-button.md
plans/active/: cokoisor-cleanup&add-button.md
(+11 files in other folders)
