[project]
name = "pathin-api"
version = "0.1.0"
description = "Flask API for PathIn"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2025.4",
    "flask>=3.1,<4",
    "flask-cors>=6,<7",
    "openai>=2.43,<3",
    "pypdf>=5.6,<6",
    "python-dotenv>=1.1,<2",
    "python-docx>=1.2,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "reportlab>=4.4,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["pathin_api"]

[tool.vercel]
entrypoint = "app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
